--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,19 @@ body {
     margin-bottom: 25px;
 }
 
+.btn-1 {
+    display: inline-block;
+    padding: 11px 35px;
+    background-color: #ff4654; 
+    color: #fffbf5;
+    text-transform: uppercase;
+    border-radius: 5px;
+}
+
+.btn-1:hover {
+    background-color: #ba3a46; 
+}
+
 
 /* Formulario */
 form {
@@ -294,7 +307,7 @@ p {
     }
     
     body {
-        font-family: 'Poppins', sans-serif;
+        font-family: 'Valorant', sans-serif;
         color: #fffbf5;
         background-color: #111823;
     }
